# MM2Chaos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bruteforce.py  bruteforce_combo.py
config/: VersionList.sym  config.cmake  npdm.json
include/: types.h
include/mmchaos/: bufmap.h  frame.h  game.h  input.h  svutil.h  types.h
include/nn/: fs.h  hid.h  os.h  result.h  types.h
include/sead/: rand.h
src/: frame.cpp  game.cpp  input.cpp  main.cpp  svutil.cpp
syms/: main.sym
